# data-engineering-zoomcamp-datatalks

./: .gitignore  .gitmodules  README.md  done-checklist.md  pyproject.toml
week-1_docker-sql-terraform/: main.tf  pg-test-connection.ipynb  variables.tf  videos-and-notes.md  week1-homework.md
week-2_workflow-orchestration/: videos-notes.md
week-2_workflow-orchestration/green_taxi_etl/data_exporters/: write_to_gcs_parquet.py
week-2_workflow-orchestration/green_taxi_etl/data_loaders/: load_api_data_green.py
week-2_workflow-orchestration/green_taxi_etl/pipelines/green_taxi_etl/: metadata.yaml  triggers.yaml
week-2_workflow-orchestration/green_taxi_etl/scratchpads/: question_4.py
week-2_workflow-orchestration/green_taxi_etl/transformers/: add_pickupdate.py  columns_to_snakecase.py  remove_zero_values.py
week-3_data-warehouse/: api_to_gcs.py  hw3.sql  scratchpad.ipynb  videos-notes.md
week-4_analytics-engineering/: video-notes.md
week-5_batch-processing/: homework-spark.ipynb
workshops/: workshop2-homework.md
workshops/workshop-1-dlt/: workshop-1_data-ingestion.md
