[tool.poetry]
name = "data-engineering-zoomcamp-datatalks"
version = "0.1.0"
description = ""
authors = ["Reema Gupta <reema.gupta@lmu.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pgcli = "^4.0.1"
pandas = "^2.2.0"
sqlalchemy = "^2.0.25"
psycopg2 = "^2.9.9"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
